--- a/genindex.html
+++ b/genindex.html
@@ -317,6 +317,8 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/tensorage/auth/index.html#tensorage.auth.link_to">link_to() (in module tensorage.auth)</a>
+</li>
       <li><a href="autoapi/tensorage/backend/base/index.html#tensorage.backend.base.BaseContext.list_dataset_keys">list_dataset_keys() (tensorage.backend.base.BaseContext method)</a>
 
       <ul>
