deploy: 12bdd7e3b8d82d23c199c480de5ff636d4a9b915

--- a/genindex.html
+++ b/genindex.html
@@ -79,8 +79,6 @@
 </li>
       <li><a href="autoapi/tensorage/session/index.html#tensorage.session.ContextWrapper.__exit__">__exit__() (tensorage.session.ContextWrapper method)</a>
 </li>
-      <li><a href="autoapi/tensorage/auth/index.html#tensorage.auth.__get_auth_info">__get_auth_info() (in module tensorage.auth)</a>
-</li>
       <li><a href="autoapi/tensorage/store/index.html#tensorage.store.TensorStore.__getattr__">__getattr__() (tensorage.store.TensorStore method)</a>
 </li>
       <li><a href="autoapi/tensorage/store/index.html#tensorage.store.StoreSlicer.__getitem__">__getitem__() (tensorage.store.StoreSlicer method)</a>
@@ -126,6 +124,8 @@
       <li><a href="autoapi/tensorage/session/index.html#tensorage.session.BackendSession._client">_client (tensorage.session.BackendSession attribute)</a>
 </li>
       <li><a href="autoapi/tensorage/backend/storage/index.html#tensorage.backend.storage.StorageContext._create_user_bucket">_create_user_bucket() (tensorage.backend.storage.StorageContext method)</a>
+</li>
+      <li><a href="autoapi/tensorage/auth/index.html#tensorage.auth._get_auth_info">_get_auth_info() (in module tensorage.auth)</a>
 </li>
       <li><a href="autoapi/tensorage/store/index.html#tensorage.store.TensorStore._keys">_keys (tensorage.store.TensorStore attribute)</a>
 </li>
@@ -605,7 +605,7 @@
       &copy;2023, Mirko Mälicke.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.2.1</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.2.2</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.13</a>
       
     </div>
