deploy: 928dd62ae1675d53c8dfb43ebd7b0c0704d685e0

--- a/genindex.html
+++ b/genindex.html
@@ -145,6 +145,8 @@
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/tensorage/store/index.html#tensorage.store.TensorStore.allow_overwrite">allow_overwrite (tensorage.store.TensorStore attribute)</a>
+</li>
       <li><a href="autoapi/tensorage/backend/base/index.html#tensorage.backend.base.BaseContext.append_tensor">append_tensor() (tensorage.backend.base.BaseContext method)</a>
 
       <ul>
@@ -213,6 +215,8 @@
 </li>
       <li><a href="autoapi/tensorage/store/index.html#tensorage.store.StoreSlicer.dataset">dataset (tensorage.store.StoreSlicer attribute)</a>
 </li>
+      <li><a href="autoapi/tensorage/store/index.html#tensorage.store.TensorStore.depr_get_select_indices">depr_get_select_indices() (tensorage.store.TensorStore method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -241,13 +245,11 @@
         <li><a href="autoapi/tensorage/backend/storage/index.html#tensorage.backend.storage.StorageContext.get_dataset">(tensorage.backend.storage.StorageContext method)</a>
 </li>
       </ul></li>
-      <li><a href="autoapi/tensorage/store/index.html#tensorage.store.StoreSlicer.get_iloc_slices">get_iloc_slices() (tensorage.store.StoreSlicer method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/tensorage/sql/sql/index.html#tensorage.sql.sql.get_script">get_script() (in module tensorage.sql.sql)</a>
+      <li><a href="autoapi/tensorage/store/index.html#tensorage.store.StoreSlicer.get_iloc_slices">get_iloc_slices() (tensorage.store.StoreSlicer method)</a>
 </li>
-      <li><a href="autoapi/tensorage/store/index.html#tensorage.store.TensorStore.get_select_indices">get_select_indices() (tensorage.store.TensorStore method)</a>
+      <li><a href="autoapi/tensorage/sql/sql/index.html#tensorage.sql.sql.get_script">get_script() (in module tensorage.sql.sql)</a>
 </li>
       <li><a href="autoapi/tensorage/backend/base/index.html#tensorage.backend.base.BaseContext.get_tensor">get_tensor() (tensorage.backend.base.BaseContext method)</a>
 
@@ -605,7 +607,7 @@
       &copy;2023, Mirko Mälicke.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.2.4</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.2.5</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.13</a>
       
     </div>
